<resources>
    <string name="app_name">Klasifikasi Makhluk Hidup</string>
    <string name="title_takson_deter">URUTAN TAKSON DAN KUNCI DETERMINASI</string>
    <string name="content_takson_gbr">Urutan takson makhluk hidup terdapat pada (Gambar 3.18) sebagai berikut: </string>
    <string name="content_takson_deter">Kunci determinasi (identifikasi) merupakan suatu kunci yang dipergunakan untuk
        menentukan filum atau divisi, kelas, ordo, famili, genus atau spesies. Dasar yang dipergunakan kunci determinasi
        ini adalah identifikasi dari makhluk hidup dengan menggunakan kunci dikotom. Hal-hal yang perlu diperhatikan dalam
        pembuatan kunci determinasi adalah sebagai berikut:
</string>
    <string name="deter_1">Kunci harus dikotom</string>
    <string name="deter_2">Kata pertama dalam tiap pernyataan dalam 1 kuplet harus identik </string>
    <string name="deter_3">Pilihan atau bagian kuplet harus kontradiktif</string>
    <string name="deter_4">Hindari pemakaian kisaran yang tumpang tindih </string>
    <string name="deter_5">Gunakan sifat-sifat yang mudah diamati</string>
    <string name="deter_6">Pernyataan dari dua kuplet yang berurutan jangan dimulai dengan kata yang sama</string>
    <string name="deter_7">Setiap kuplet diberi nomor</string>
    <string name="deter_8">Buat kalimat pertanyaan yang pendek</string>
    <string name="content_deter">Contoh kunci determinasi : (suplir, lumut, terong, melinjo, jagung dan kacang kedelai)</string>
    <string name="title_klasifikasi_tumbuhan">KRITERIA KLASIFIKASI TUMBUHAN BERDASARKAN :</string>
    <string name="content_tumbuhan_1">Organ perkembangbiakannya, apakah dengan spora atau dengan bunga</string>
    <string name="content_tumbuhan_2">Habitusnya, apakah berupa pohon, perdu atau semak</string>
    <string name="content_tumbuhan_3">Bentuk dan ukuran daun</string>
    <string name="content_tumbuhan_4">Cara berkembang biak, apakah dengan seksual (generatif) atau aseksual (vegetatif)</string>
    <string name="title_klasifikasi_hewan">KRITERIA KLASIFIKASI HEWAN BERDASARKAN :</string>
    <string name="content_hewan_1">Saluran pencernaan makanan. Hewan tingkat rendah belum mempunyai saluran pencernaan makanan. Sedangkan hewan tingkat tinggi mempunyai lubang mulut, saluran pencernaan dan anus
</string>
    <string name="content_hewan_2">Anggota gerak, apakah berkaki dua, empat atau tidak berkaki</string>
    <string name="title_tumbuhan">TUMBUHAN</string>
    <string name="title_hewan">HEWAN</string>
    <string name="content_monera">Kingdom monera merupakan kelompok makhluk hidup bersel satu (uniseluler) yang bersifat prokariotik. Prokariotik artinya inti sel tidak terlindungi oleh selaput inti (karioteka). Umumnya monera berkembang biak dengan cara membelah diri (aseksual) dan konjugasi (seksual). Beberapa jenis monera hidup bersama membentuk koloni atau kelompok. Sebagian besar anggota monera tidak dapat membuat makanan sendiri sehingga bersifat heterotrof. Anggota kingdom monera meliputi, bakteri dan ganggang hijau-biru <i>(Cyanobacteria)</i>.</string>
    <string name="video_monera">Video kingdom monera</string>
    <string name="content_bakteri">Bakteri merupakan makhluk hidup renik yang tersusun atas satu sel. Organisme ini berukuran sangat kecil, panjangnya antara 0,1-100 mikron (1 mikron = 1/1000 milimeter). Karena ukurannya yang sangat kecil maka hanya dapat dilihat menggunakan mikroskop. Bakteri dapat hidup dimana saja, mulai dari daerah tropis hingga daerah kutub. Bakteri memiliki bentuk beraneka ragam, ada yang berbentuk bulat seperti bola (kokus), batang (basilus) dan berbentuk spiral (spirillum) (Gambar 3.19). Contoh dari bakteri yaitu bakteri  <i>Escerichia coli</i>.</string>
    <string name="content_ganggang">Ganggang hijau-biru merupakan makhluk hidup renik bersel satu. Struktur selnya sama seperti struktur sel bakteri, yaitu bersifat prokariotik. Ganggang hijau-biru mempunyai pigmen fotosintetik didalam sitoplasmanya, yaitu klorofil tipe a. Hal ini memungkinkan ganggang hijau-biru untuk melakukan fotosintesis. Beberapa jenisnya juga ada yang mempunyai pigmen lain, seperti fikoeritrin (merah) dan fikosianin (biru). Ganggang hijau-biru ada yang hidup soliter dan ada pula yang hidup berkoloni. Ganggang hijau-biru dapat ditemukan hampir disemua habitat antara lainair laut, air tawar, bebatuan dan tanah. Beberapa contoh ganggang hijau-biru yaitu <i>Spirulinaa, Anabaena</i> dan <i>Nostoc</i> (Gambar 3.20).</string>
    <string name="content_protista">Protista berasal dari kata <i>Protos</i> yang berarti pertama. Jadi protista merupakan organisme eukariotik pertama. Kingdom protista memiliki membran inti (eukariotik), bersel tunggal, multiseluler dan uniseluler serta bersifat autotrof. Protista dibedakan menjadi tiga yaitu protista mirip hewan (Protozoa), protista mirip tumbuhan (Alga), dan protista mirip jamur.</string>
    <string name="video_protista">Video kingdom protista</string>
    <string name="content_fungi">Fungi biasa dikenal dengan istilah jamur yang memiliki membran inti, dinding sel, bersifat uniseluler dan multiseluler dan tidak memiliki kloroplas. Dalam kingdom fungi juga dikenal adanya proses simbiosis yang bersifat mutualisme yaitu simbiosis antara ganggang dan jamur yang menghasilkan lumut kerak.  Berdasarkan cara reproduksi, kingdom fungi dibagi menjadi 4 kelompok diantaranya: </string>
    <string name="video_fungi">Video kingdom fungi</string>
    <string name="content_plantae">Kingdom plantae dikelompokan menjadi 3 kelompok besar diantaranya yaitu tumbuhan biji, tumbuhan paku serta tumbuhan lumut. </string>
    <string name="video_plantae">Video kingdom plantae</string>
    <string name="content_spermatophyta">Tumbuhan biji merupakan jenis tumbuhan yang dapat menghasilkan biji sendiri, memiliki akar, batang, daun serta berkas pembuluh. Tumbuhan biji dikelompokan menjadi 2 kelompok berdasarkan letak bakal bjinya yaitu:</string>
    <string name="content_gym">Tumbuhan biji terbuka memiliki ciri-ciri letak bakal biji tidak terlindungi oleh buah daun tetapi menempel pada daun buah, berakar tunggang, daunnya seperti jarum, kecil   tebal, alat kelamin jantan dan betina disebut strobilus yang mengandung sporangium. Tumbuhan biji terbuka dikelompokan menjadi 4 divisi diantaranya:</string>
    <string name="content_gnetop"><i>Gnetophyta</i>, memiliki ciri-ciri batang berkayu, bercabang dan berdaun tunggal, tumbuhan berumah dua, strobilus jantan dan betina tersusun berlingkar dalam bentuk bulir. Benang sari tersusun dalam spiral, jumlahnya banyak dan terdapat di bawah lingkaran bakal biji yang mandul. Strobilus betina mempunyai bakal biji tersusun dalam lingkaran, bakal biji yang fertil dibungkus oleh dua lapis integumen. Kemudian mempunyai strobilus jantan yang tersusun majemuk, daun-daun berhadapan atau berlingkar, dan tidak mempunyai saluran resin. Contohnya: Ephendra <i>(Ephdra sp)</i> dan melinjo <i>(Gnetum gnemon)</i> (Gambar 3.33)</string>
    <string name="content_ginkgo"><i>Ginkgophyta</i>, memiliki ciri-ciri merupakan pohon yang berukuran tinggi, batang berkayu, bercabang, daun berbentuk kipas. Daun mempunyai tangkai yang panjang, berbentuk kipas dan tulang daun bercabang. Pada musim gugur daun akan meranggas, bijinya pada buahnya mempunyai kulit luar yang berdaging dan kuit dalam yang keras. Contohnya: gingko <i>(Ginkgo biloba)</i> (Gambar 3.34).</string>
    <string name="content_cyca"><i>Cycadophyta</i>, memiliki ciri-ciri yaitu tanaman ini banyak ditemukan di daerah tropis hingga subtropis.  Kekhasan dari tanaman ini adalah cabangnya yang tidak bercabang dan memiliki daun majemuk (dalam tangkai daun ada banyak daun atau lebih dari satu). Hampir semua anggota tanaman ini berkembang biak dengan dua atau lebih genitalia jantan dan genitalia betina di pohon yang berbeda. Pohon betina membentuk karpel yang menyerupai tangkai dan agak rata, di ujungnya ada lekuk yang mengandung telur. Sementara itu, ada kantong di pohon jantan yang mengandung serbuk sari. Contohnya: pakis haji <i>(Cycas rumphii)</i> (Gambar 3.35).</string>
    <string name="content_coni"><i>Coniferophyta</i>, memiliki ciri-ciri tumbuhan semak berbentuk kerucut dan seperti jarum umumnya tidak memiliki daun, daunnya asikuler, dalam bentuk pohon, memiliki strobilus berbentuk kerucut. Strobilus pada tumbuhan konifer ada dua, yaitu strobilus jantan dan strobilus betina. Strobilus jantan menghasilkan serbuk sari yang mengandung sperma sedangkan strobilus betina adalah biji strobililus yang mengandung telur. Contohnya: pohon damar <i>(Agathis alba)</i> dan pinus <i>(Pinus merkusii)</i> (Gambar 3.36).</string>
    <string name="content_angio">Tumbuhan biji tertutup memiliki ciri-ciri yaitu alat perkembangbiakan berupa bunga, akar, batang dan daun sudah dapat dibedakan dengan jelas, susunan tulang daun menyirip, menjari atau sejajar, bakal biji terlindungi didalam daun buah, mengalamai pembuahan ganda. Tumbuhan biji tertutup dibagi menjadi 2 kelompok diantaranya:</string>
    <string name="content_dikotil">Tumbuhan dikotil memiliki ciri-ciri yaitu berakar
tunggang, biji berkeping dua, batang bercabang, tulang
daun menyirip, bagian bunga berjumlah kelipatan 2, 4
atau 5 serta biji memiliki dua daun tembaga. Tumbuhan
dikotil terbagi menjadi 3 suku yaitu:</string>
    <string name="content_monokotil">Tumbuhan monokotil memiliki ciri-ciri berakar serabut, daun berseling, bagian bunga berjumlah kelipatan 3, biji berkeping satu, tulang daun sejajar. Tumbuhan monokotil terbagi menjadi 4 suku yaitu: </string>
    <string name="content_paku">Tumbuhan paku merupakan jenis tumbuhan yang memiliki ciri-ciri berkembang biak secara kawin dan tak kawin, memiliki akar, batang dan daun sejati serta memiliki sorus yang dibungkus indusium serta tumbuhan paku dapat berbentuk pohon yang biasanya tidak bercabang, semak, epifit, tumbuh merambat, mengapung di air, hidrofit atau berupa terna dengan rimpang yang menjalar di tanah atau humus. Tumbuhan paku digolongkan menjadi 4 divisi diantaranya:</string>
    <string name="content_lumut">Tumbuhan lumut merupakan spesies yang memiliki ciri-ciri umumnya berukuran tinggi rata-rata kurang lebih 1-2 cm dan yang paling tinggi 20 cm, mengalami pergiliran keturunan generasi sporofit dan generasi gametofit, berkembang biak secara kawin dan tak kawin, membentuk seperti lembaran, bersifat autotrof karena tumbuhan lumut sudah memiliki klorofil, memiliki rhizoid, serta memiliki akar, batang daun yang tidak sejati serta memiliki berkas pembuluh. Lumut dibedakan menjadi 3 jenis golongan (divisi) antara lain:</string>
    <string name="pisanglabel">PISANG-PISANGAN <i>(MUSACEAE)</i></string>
    <string name="pinanglabel">PINANG-PINANGAN <i>(PALMAE)</i></string>
    <string name="bawanglabel">BAWANG-BAWANGAN <i>(LILIACEAE)</i></string>
    <string name="rumputlabel">RUMPUT-RUMPUTAN <br><i>(GRAMINEAE)</i></br></string>
    <string name="kawatlabel">PAKU KAWAT <br><i>(LYOPODINAE)</i></br></string>
    <string name="telanjanglabel">PAKU TELANJANG <br><i>(PSILOPHYTINAE)</i></br></string>
    <string name="sejatilabel">PAKU SEJATI <br><i>(FILICINAE)</i></br></string>
    <string name="kudalabel">PAKU EKOR KUDA <br><i>(EQUISETINAE)</i></br></string>
    <string name="ascomycotina"><i>ASCOMYCOTINA</i></string>
    <string name="basidiomycotina"><i>BASIDIOMYCOTINA</i></string>
    <string name="zigomycotina"><i>ZIGOMYCOTINA</i></string>
    <string name="deuteromycotina"><i>DEUTEROMYCOTINA</i></string>
    <string name="button_paku">Tumbuhan paku <i>(Pteridophyta)</i></string>
    <string name="button_gymnos">TUMBUHAN BIJI TERBUKA <i>(GYMNOSPERMAE)</i></string>
    <string name="button_gne"><i>GNETOPHYTA</i></string>
    <string name="button_gink"><i>GINKGOPHYTA</i></string>
    <string name="button_cyca"><i>CYCADOPHYTA</i></string>
    <string name="button_coni"><i>CONIFEROPHYTA</i></string>
    <string name="sumber_gne">Gambar 3.33 : <i>Gnetum gnemon</i> Sumber : tropical.theferns.info</string>
</resources>