<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gymnospermae"
    android:background="@drawable/bg_gym">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:id="@+id/menubar"
                android:layout_marginRight="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_menu_24"
                android:onClick="showPopup" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"

            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="299dp"
                android:layout_height="91dp"
                android:layout_marginEnd="140dp"
                android:text="@string/button_gymnos"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:background="@drawable/bggarisputih"
                android:padding="15dip" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:justificationMode="inter_word"
                android:padding="18dip"
                android:text="@string/content_gym"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btngnetop"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_gne"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/bgbiruspiral"></Button>


                <Button
                    android:id="@+id/btngink"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_gink"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/bgbiruspiral"
                    android:layout_marginTop="10dp"></Button>


                <Button
                    android:id="@+id/btncycado"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cyca"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/bgbiruspiral"
                    android:layout_marginTop="10dp"></Button>


                <Button
                    android:id="@+id/btnconi"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_coni"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/bgbiruspiral"
                    android:layout_marginTop="10dp"></Button>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>