<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contoh5kindom.kingdom_plantae"
    android:background="@drawable/bg_paku">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

         <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_alignParentRight="true"
                android:id="@+id/menubar"
                android:layout_marginRight="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_menu_24"
                android:onClick="showPopup" />
        </RelativeLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="140dp"
                android:textSize="19sp"
                android:textAlignment="center"
                android:fontFamily="@font/alegreya"
                android:textStyle="bold"
                android:text="@string/button_paku"
                android:background="@drawable/bg_birulaut"
                android:padding="9dip" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:padding="18dip"
                android:background="#CBFFFFFF"
                android:text="@string/content_paku"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnsejati"
                    android:layout_width="276dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/alegreya"
                    android:textSize="19sp"
                    android:text="@string/sejatilabel"
                    android:paddingBottom="10dip"
                    android:textColor="@color/white"
                    android:layout_height="match_parent"
                    android:background="@drawable/bgoranye"></Button>


                <Button
                    android:text="@string/telanjanglabel"
                    android:paddingBottom="10dip"
                    android:textStyle="bold"
                    android:fontFamily="@font/alegreya"
                    android:textSize="19sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/btntelanjang"
                    android:layout_width="276dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bgoranye"></Button>


                <Button
                    android:text="@string/kawatlabel"
                    android:paddingBottom="10dip"
                    android:textStyle="bold"
                    android:fontFamily="@font/alegreya"
                    android:textSize="19sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/btnkawat"
                    android:layout_width="276dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bgoranye"></Button>


                <Button
                    android:text="@string/kudalabel"
                    android:paddingBottom="10dip"
                    android:textStyle="bold"
                    android:fontFamily="@font/alegreya"
                    android:textSize="19sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/btnkuda"
                    android:layout_width="276dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bgoranye"></Button>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>