<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contoh5kindom.kingdom_fungi"
    android:background="@drawable/bg_fungi">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_alignParentRight="true"
                android:id="@+id/menubar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_menu_24"
                android:onClick="showPopup" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="140dp"
                android:background="@drawable/bg_kayu_oren"
                android:padding="15dip"
                android:fontFamily="@font/alegreya"
                android:text="KINGDOM FUNGI"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"

                android:textStyle="bold" />

            <TextView
                android:background="#D5FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:justificationMode="inter_word"
                android:padding="10dip"
                android:text="@string/content_fungi"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:layout_marginTop="20dp"
                    android:id="@+id/btnascom"
                    android:text="@string/ascomycotina"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"

                    android:background="@drawable/bg_hitam"></Button>

                <Button
                    android:id="@+id/btnbasidio"
                    android:layout_marginTop="20dp"
                      android:text="@string/basidiomycotina"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"

                    android:background="@drawable/bg_hitam"></Button>



                <Button
                    android:id="@+id/btnzigo"
                    android:layout_marginTop="20dp"
                    android:text="@string/zigomycotina"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"

                    android:background="@drawable/bg_hitam"></Button>

                <Button
                    android:id="@+id/btndeutero"
                    android:layout_marginTop="20dp"
                    android:text="@string/deuteromycotina"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"

                    android:background="@drawable/bg_hitam"></Button>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:background="#FFBD59">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logoyoutube"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/youtube_fungi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/video_fungi"
                android:textColor="@color/black" />

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>