<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gnetophya"
    android:background="@drawable/bg_gym">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:id="@+id/menubar"
                android:layout_marginRight="0dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_menu_24"
                android:onClick="showPopup" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/button_gne"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/alegreya"
                android:padding="15dip"
                android:textColor="@color/black"
                android:background="@drawable/bgbiruspiral"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:padding="18dip"
                android:text="@string/content_gnetop"
                android:textColor="@color/black"
                android:textSize="16sp" />



                <com.zolad.zoominimageview.ZoomInImageView
               android:layout_gravity="center"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:background="@drawable/gnegambar"></com.zolad.zoominimageview.ZoomInImageView>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aileron"
               android:text="@string/sumber_gne"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="12sp"
                android:background="@color/white"/>
            
        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>